Added gulpfile and index file

--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>JS Lab</title>
+	<title>Peki - dead simple Speak n Spell </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- build:styles -->
 	<link rel="stylesheet" href="styles/css/libs.css">
 	<link rel="stylesheet" href="styles/css/style.css">
+	<!-- endbuild -->
 </head>
 <body>
 	<div id="wrap">
 		<input type="text" id="letter">
 	</div>
+	<!-- build:scripts -->
 	<script src="js/dist/libs.js"></script>
 	<script src="js/dist/app.js"></script>
+	<!-- endbuild -->
 </body>
 </html>
