--- a/index.html
+++ b/index.html
@@ -19,9 +19,22 @@
 
 </head>
 <body>
+<!-- Hi! I'm just curious if anyone is using this. No commercial interests here -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-87916800-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- Alright. Done with the analytics... -->
+
 	<div id="wrap">
 		<input type="text" id="letter">
 	</div>
+
 	<!-- build:scripts -->
 	<script src="js/dist/libs.js"></script>
 	<script src="js/dist/app.js"></script>
